--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,11 @@
     .tab{flex:1;padding:5px;background:#333;border:1px solid #444;color:#eee;cursor:pointer;text-align:center}
     .tab.active{background:#555}
     #fileList{display:flex;flex-direction:column;gap:6px}
-    .chat-entry{cursor:pointer;color:#9cf;padding:2px}
+    .chat-entry{cursor:pointer;color:#9cf;padding:2px;display:flex;align-items:center}
     .chat-entry:hover{background:#3a3a3a}
-    .chat-name{font-size:14px}
+    .chat-name{font-size:14px;flex:1}
     .chat-file{font-size:12px;color:#aaa;margin-left:4px}
+    .chat-btn{margin-left:4px;background:#444;color:#eee;border:1px solid #666;font-size:11px;cursor:pointer}
     #chat{flex:1;display:flex;flex-direction:column;height:100%}
     #chatHeader{padding:10px;border-bottom:1px solid #444}
     #chatName{font-size:18px;margin-bottom:2px}
