Fix js not loading

--- a/static/index.html
+++ b/static/index.html
@@ -56,6 +56,6 @@
       <button onclick='sendMsg()'>Send</button>
     </div>
   </div>
-  <script src="app.js"></script>
+<script src="/static/app.js"></script>
 </body>
 </html>
