--- a/static/index.html
+++ b/static/index.html
@@ -31,6 +31,27 @@
     #input{display:flex;border-top:1px solid #444}
     #input textarea{flex:1;padding:5px;background:#333;color:#eee;border:1px solid #444}
     #input button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px}
+
+    /* minimal scrollbars */
+    #sidebar, #messages {
+      scrollbar-width: thin;
+      scrollbar-color: #666 #333;
+    }
+    #sidebar::-webkit-scrollbar, #messages::-webkit-scrollbar {
+      width: 6px;
+    }
+    #sidebar::-webkit-scrollbar-track, #messages::-webkit-scrollbar-track {
+      background: #333;
+    }
+    #sidebar::-webkit-scrollbar-thumb, #messages::-webkit-scrollbar-thumb {
+      background-color: #666;
+    }
+
+    @media (max-width: 700px) {
+      body{flex-direction:column}
+      #sidebar{width:100%;height:200px;border-right:none;border-bottom:1px solid #444}
+      #chat{flex:1}
+    }
   </style>
 </head>
 <body>
