--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,10 @@
   <meta charset='utf-8'>
   <title>GroqChat Web</title>
   <style>
-    body{font-family:Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:#1e1e1e;color:#eee}
+    body{font-family:Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:#1e1e1e;color:#eee;font-size:16px}
     #sidebar{width:250px;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column}
+    #sidebar.show{transform:translateX(0)}
+    #menuButton{display:none;position:fixed;top:10px;left:10px;z-index:11;background:#444;color:#eee;border:1px solid #555;font-size:20px;padding:5px 10px;cursor:pointer}
     #tabButtons{display:flex;margin-bottom:10px}
     .tab{flex:1;padding:5px;background:#333;border:1px solid #444;color:#eee;cursor:pointer;text-align:center}
     .tab.active{background:#555}
@@ -48,13 +50,18 @@
     }
 
     @media (max-width: 700px) {
-      body{flex-direction:column}
-      #sidebar{width:100%;height:200px;border-right:none;border-bottom:1px solid #444}
-      #chat{flex:1}
+      body{flex-direction:column;font-size:18px}
+      #sidebar{position:fixed;top:0;left:0;height:100vh;width:250px;border-bottom:none;transform:translateX(-260px);transition:transform .3s;z-index:10}
+      #chat{flex:1;margin-left:0}
+      #menuButton{display:block}
+      .chat-name{font-size:16px}
+      .chat-file{font-size:14px}
+      #chatName{font-size:20px}
     }
   </style>
 </head>
 <body>
+  <button id='menuButton' onclick='toggleSidebar()'>☰</button>
   <div id='sidebar'>
     <h3>Chats</h3>
     <div id='tabButtons'></div>
