--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GroqChat Web</title>
   <style>
     body{font-family:Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:#1e1e1e;color:#eee;font-size:16px}
@@ -30,7 +31,7 @@
     .error{background:#552222;color:#ffbbbb;align-self:center}
     #sysBox{margin-top:10px}
     #sysPrompt{width:100%;background:#333;color:#eee;border:1px solid #555;margin-top:4px}
-    #input{display:flex;border-top:1px solid #444}
+    #input{display:flex;border-top:1px solid #444;position:sticky;bottom:0;background:#1e1e1e}
     #input textarea{flex:1;padding:5px;background:#333;color:#eee;border:1px solid #444}
     #input button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px}
 
