Add API key update UI and endpoint

--- a/static/index.html
+++ b/static/index.html
@@ -70,6 +70,10 @@
     <div id='tabButtons'></div>
     <div id='fileList'></div>
     <button id='clearArchiveBtn' style='display:none' onclick='clearArchive()'>Clear All</button>
+    <div id='apiKeyBox' style='margin-top:10px;'>
+      <input type='password' id='apiKeyInput' placeholder='API key' style='width:100%;box-sizing:border-box;margin-bottom:4px;background:#333;color:#eee;border:1px solid #555'>
+      <button onclick='updateApiKey()'>Update Key</button>
+    </div>
   </div>
   <div id='chat'>
     <div id='chatHeader'>
