--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
     #sysBox{margin-top:10px}
     #sysPrompt{width:100%;background:#333;color:#eee;border:1px solid #555;margin-top:4px}
     #input{display:flex;border-top:1px solid #444;position:sticky;bottom:0;background:#1e1e1e}
-    #input textarea{flex:1;padding:5px;background:#333;color:#eee;border:1px solid #444}
+    #input textarea{flex:1;padding:5px;background:#333;color:#eee;border:1px solid #444;border-radius:10px;margin-right:5px;max-width:75%}
     #input button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px;border-radius:8px;transition:background .2s}
     #input button:hover{background:#555}
 
