--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GroqChat Web</title>
   <style>
-    body{font-family:Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:#1e1e1e;color:#eee;font-size:16px}
-    #sidebar{width:250px;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;overflow:hidden}
+    /* page gradient and nicer default font */
+    body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px}
+    /* subtle shadow around sidebar */
+    #sidebar{width:250px;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,0.5)}
     #sidebar.show{transform:translateX(0)}
     #menuButton{display:none;position:fixed;top:10px;left:10px;z-index:11;background:#444;color:#eee;border:1px solid #555;font-size:20px;padding:5px 10px;cursor:pointer;border-radius:10px;transition:left .3s}
     #menuButton.open{left:260px}
@@ -27,13 +29,15 @@
     .chat-file{font-size:12px;color:#aaa;margin-left:4px}
     .chat-btn{margin-left:4px;background:#444;color:#eee;border:1px solid #666;font-size:11px;cursor:pointer;border-radius:8px;transition:background .2s}
     .chat-btn:hover{background:#555}
-    #chat{flex:1;display:flex;flex-direction:column;height:100%;border:1px solid #444;border-left:none;border-radius:12px;overflow:hidden}
+    /* match shadow on main chat area */
+    #chat{flex:1;display:flex;flex-direction:column;height:100%;border:1px solid #444;border-left:none;border-radius:12px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,0.5)}
     #chatHeader{padding:10px;border-bottom:1px solid #444}
     #chatName{font-size:18px;margin-bottom:2px}
     #chatPath{font-size:12px;color:#aaa}
     #summaryBox{margin-top:8px;font-size:12px}
     #summaryText{white-space:pre-wrap}
-    #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;gap:8px}
+    /* smooth scrolling for new messages */
+    #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;gap:8px;scroll-behavior:smooth}
     .message{padding:8px;border-radius:8px;max-width:80%;white-space:pre-wrap}
     .user{background:#2f3b55;align-self:flex-end}
     .assistant{background:#353535}
