--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     /* page gradient and nicer default font */
     body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px}
     /* subtle shadow around sidebar */
-    #sidebar{width:250px;height:100vh;border-right:1px solid #444;overflow:hidden;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
+    #sidebar{width:250px;height:100vh;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
     #sidebar.show{transform:translateX(0)}
     #menuButton{display:none;position:fixed;top:10px;left:10px;z-index:11;background:#444;color:#eee;border:1px solid #555;font-size:20px;padding:5px 10px;cursor:pointer;border-radius:10px;transition:left .3s}
     #menuButton.open{left:260px}
