--- a/static/index.html
+++ b/static/index.html
@@ -9,14 +9,15 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#ffffff">
-  <style>
-    /* page gradient and nicer default font */
-    body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px}
+    <style>
+      :root{--sidebar-width:min(250px,50vw);} /* variable to cap sidebar width */
+      /* page gradient and nicer default font */
+      body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px}
     /* subtle shadow around sidebar */
-    #sidebar{width:250px;height:100vh;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
+    #sidebar{width:var(--sidebar-width);height:100vh;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
     #sidebar.show{transform:translateX(0)}
     #menuButton{display:none;position:fixed;top:10px;left:10px;z-index:11;background:#444;color:#eee;border:1px solid #555;font-size:20px;padding:5px 10px;cursor:pointer;border-radius:10px;transition:left .3s}
-    #menuButton.open{left:260px}
+    #menuButton.open{left:calc(var(--sidebar-width) + 10px)}
 
     button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px;border-radius:8px;cursor:pointer;transition:background .2s}
     button:hover{background:#555}
@@ -74,7 +75,7 @@
 
     @media (max-width: 700px) {
       body{flex-direction:column;font-size:18px}
-      #sidebar{position:fixed;top:0;left:0;height:100vh;width:250px;border-bottom:none;transform:translateX(-260px);transition:transform .3s;z-index:10;border-radius:12px}
+      #sidebar{position:fixed;top:0;left:0;height:100vh;width:var(--sidebar-width);border-bottom:none;transform:translateX(calc(-1 * (var(--sidebar-width) + 10px)));transition:transform .3s;z-index:10;border-radius:12px}
       #chat{flex:1;margin-left:0;margin-top:50px}
       #menuButton{display:block}
       .chat-name{font-size:16px}
