--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
     #tabButtons{display:flex;margin-bottom:10px}
     .tab{flex:1;padding:5px;background:#333;border:1px solid #444;color:#eee;cursor:pointer;text-align:center;border-radius:8px;transition:background .2s;margin-right:4px}
     .tab.active{background:#555}
-    #fileList{flex:1;overflow-y:auto;display:flex;flex-direction:column;gap:6px;resize:vertical;min-height:50px}
+    #fileList{flex:1;overflow-y:auto;display:flex;flex-direction:column;gap:6px;resize:vertical;min-height:50px;max-height:75%}
     .chat-entry{cursor:pointer;color:#9cf;padding:2px;display:flex;align-items:center}
     .chat-entry:hover{background:#3a3a3a}
     .chat-name{font-size:14px;flex:1}
