--- a/static/index.html
+++ b/static/index.html
@@ -1,74 +1,136 @@
 <!DOCTYPE html>
+<!-- Main HTML page for the GroqChat web application -->
 <html>
 <head>
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GroqChat Web</title>
-  <style>
-    :root { --sidebar-width: min(250px, 50vw); }
-    body { display: flex; height: 100vh; margin:0; background: #1e1e1e; color: #eee; font-family: 'Segoe UI', Arial, sans-serif; }
-    #sidebar { width: var(--sidebar-width); height: 100vh; display: flex; flex-direction: column; background: #2b2b2b; border-right: 1px solid #444; box-shadow: 0 0 10px rgba(0,0,0,0.5); border-radius: 12px; }
-    #sidebarContent { flex: 3; overflow-y: auto; padding: 10px; }
-    #commandBarContainer { flex: 1; overflow-y: auto; padding: 10px; border-top: 1px solid #444; background: #2b2b2b; }
+  <link rel="manifest" href="/manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#ffffff">
+    <style>
+      :root{--sidebar-width:min(250px,50vw);} /* variable to cap sidebar width */
+      /* page gradient and nicer default font */
+      body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px}
+    /* subtle shadow around sidebar */
+    #sidebar{width:var(--sidebar-width);height:100vh;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
+    #sidebar.show{transform:translateX(0)}
+    #menuButton{display:none;position:fixed;top:10px;left:10px;z-index:11;background:#444;color:#eee;border:1px solid #555;font-size:20px;padding:5px 10px;cursor:pointer;border-radius:10px;transition:left .3s}
+    #menuButton.open{left:calc(var(--sidebar-width) + 10px)}
 
-    button { background: #444; color: #eee; border: 1px solid #555; padding: 5px 10px; border-radius: 8px; cursor: pointer; transition: background .2s; }
-    button:hover { background: #555; }
+    button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px;border-radius:8px;cursor:pointer;transition:background .2s}
+    button:hover{background:#555}
 
-    #tabButtons { display: flex; margin-bottom: 10px; }
-    .tab { flex:1; padding:5px; background:#333; border:1px solid #444; color:#eee; cursor:pointer; text-align:center; border-radius:8px; margin-right:4px; transition:background .2s; }
-    .tab.active { background: #555; }
+    #newChatBtn{margin-bottom:8px}
 
-    #fileList { display: flex; flex-direction: column; gap: 6px; }
-    .chat-entry { cursor: pointer; color: #9cf; padding: 2px; }
-    .chat-entry:hover { background: #3a3a3a; }
-    .chat-name { font-size: 14px; }
+    #tabButtons{display:flex;margin-bottom:10px}
+    .tab{flex:1;padding:5px;background:#333;border:1px solid #444;color:#eee;cursor:pointer;text-align:center;border-radius:8px;transition:background .2s;margin-right:4px}
+    .tab.active{background:#555}
+    #fileList{flex:1;overflow-y:auto;display:flex;flex-direction:column;gap:6px;resize:vertical;min-height:50px;max-height:75%}
+    .chat-entry{cursor:pointer;color:#9cf;padding:2px;display:flex;align-items:center}
+    .chat-entry:hover{background:#3a3a3a}
+    .chat-name{font-size:14px;flex:1}
+    .chat-file{font-size:12px;color:#aaa;margin-left:4px}
+    .chat-btn{margin-left:4px;background:#444;color:#eee;border:1px solid #666;font-size:11px;cursor:pointer;border-radius:8px;transition:background .2s}
+    .chat-btn:hover{background:#555}
+    /* match shadow on main chat area */
+    #chat{flex:1;display:flex;flex-direction:column;height:100%;border:1px solid #444;border-left:none;border-radius:12px;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,0.5)}
+    #chatHeader{padding:10px;border-bottom:1px solid #444}
+    #chatName{font-size:18px;margin-bottom:2px}
+    #chatPath{font-size:12px;color:#aaa}
+    #summaryBox{margin-top:8px;font-size:12px}
+    #summaryText{white-space:pre-wrap}
+    /* smooth scrolling for new messages */
+    #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;gap:8px;scroll-behavior:smooth}
+    .message{padding:8px;border-radius:8px;max-width:80%;white-space:pre-wrap}
+    .user{background:#2f3b55;align-self:flex-end}
+    .assistant{background:#353535}
+    .system{background:#444;align-self:center}
+    .error{background:#552222;color:#ffbbbb;align-self:center}
+    #sysBox{margin-top:10px}
+    #sysPrompt{width:100%;background:#333;color:#eee;border:1px solid #555;margin-top:4px}
+    #input{display:flex;border-top:1px solid #444;position:sticky;bottom:0;background:#1e1e1e}
+    #input textarea{flex:1;padding:5px;background:#333;color:#eee;border:1px solid #444;border-radius:10px;margin-right:5px;max-width:75%}
+    #input button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px;border-radius:8px;transition:background .2s}
+    #input button:hover{background:#555}
 
-    details summary { cursor: pointer; }
+    #cmdBox{margin-top:auto;background:#2b2b2b}
+    #commandBar{background:#2b2b2b;padding:10px;border-top:1px solid #444;display:flex;flex-direction:column;gap:6px}
 
-    #chat { flex:1; display: flex; flex-direction: column; height:100%; margin-left: 10px; background: #151515; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.5); overflow: hidden; }
-    #chatHeader { padding: 10px; border-bottom: 1px solid #444; }
-    #messages { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; gap:8px; }
-    .message { padding:8px; border-radius:8px; max-width:80%; white-space:pre-wrap; }
-    .user { background:#2f3b55; align-self:flex-end; }
-    .assistant { background:#353535; }
-    .system { background:#444; align-self:center; }
+    /* minimal scrollbars */
+    #fileList, #messages {
+      scrollbar-width: thin;
+      scrollbar-color: #666 #333;
+    }
+    #fileList::-webkit-scrollbar, #messages::-webkit-scrollbar {
+      width: 6px;
+    }
+    #fileList::-webkit-scrollbar-track, #messages::-webkit-scrollbar-track {
+      background: #333;
+    }
+    #fileList::-webkit-scrollbar-thumb, #messages::-webkit-scrollbar-thumb {
+      background-color: #666;
+    }
 
-    #input { display:flex; border-top:1px solid #444; background:#1e1e1e; }
-    #input textarea { flex:1; padding:5px; background:#333; color:#eee; border:1px solid #444; border-radius:10px; margin:5px; }
+    @media (max-width: 700px) {
+      body{flex-direction:column;font-size:18px}
+      #sidebar{position:fixed;top:0;left:0;height:100vh;width:var(--sidebar-width);border-bottom:none;transform:translateX(calc(-1 * (var(--sidebar-width) + 10px)));transition:transform .3s;z-index:10;border-radius:12px}
+      #chat{flex:1;margin-left:0;margin-top:50px}
+      #menuButton{display:block}
+      .chat-name{font-size:16px}
+      .chat-file{font-size:14px}
+      #chatName{font-size:20px}
+    }
   </style>
 </head>
 <body>
-  <div id="sidebar">
-    <div id="sidebarContent">
-      <h3>Chats</h3>
-      <button id="newChatBtn">New Chat</button>
-      <div id="tabButtons"></div>
-      <div id="fileList"></div>
-      <button id="clearArchiveBtn">Clear All</button>
-    </div>
-    <div id="commandBarContainer">
-      <details>
-        <summary>Commands</summary>
-        <div id="commandBar">
-          <input type="password" id="apiKeyInput" placeholder="API key" style="width:100%;margin-bottom:4px;background:#333;color:#eee;border:1px solid #555;">
-          <button>Update Key</button>
-          <button>Update Server</button>
+  <button id='menuButton' onclick='toggleSidebar()'>☰</button>
+  <!-- Sidebar with chat list and controls -->
+  <div id='sidebar'>
+    <h3>Chats</h3>
+    <button id='newChatBtn' onclick='newChat()'>New Chat</button>
+    <div id='tabButtons'></div>
+    <div id='fileList'></div>
+    <button id='clearArchiveBtn' style='display:none' onclick='clearArchive()'>Clear All</button>
+    <!-- Command inputs for API key and server update -->
+    <details id='cmdBox'>
+      <summary>Commands</summary>
+      <div id='commandBar'>
+        <div id='apiKeyBox' style='margin-top:10px;'>
+          <input type='password' id='apiKeyInput' placeholder='API key' style='width:100%;box-sizing:border-box;margin-bottom:4px;background:#333;color:#eee;border:1px solid #555'>
+          <button onclick='updateApiKey()'>Update Key</button>
         </div>
+        <button onclick='updateServer()'>Update Server</button>
+      </div>
+    </details>
+  </div>
+  <!-- Main chat area -->
+  <div id='chat'>
+    <div id='chatHeader'>
+      <div id='chatName'></div>
+      <div id='chatPath'></div>
+      <details id='summaryBox' open>
+        <summary>Summary</summary>
+        <div id='summaryText'></div>
+      </details>
+      <details id='sysBox'>
+        <summary>System Prompt</summary>
+        <textarea id='sysPrompt' rows='4' onchange='updateSystem()'></textarea>
+        <button onclick='updateSystem()'>Save</button>
       </details>
     </div>
-  </div>
-  <div id="chat">
-    <div id="chatHeader">
-      <div id="chatName">Chat Name</div>
-    </div>
-    <div id="messages">
-      <div class="message user">Hello!</div>
-      <div class="message assistant">Hi there, how can I help you?</div>
-    </div>
-    <div id="input">
-      <textarea rows="3"></textarea>
-      <button>Send</button>
+    <div id='messages'></div>
+    <div id='input'>
+      <textarea id='msg' rows='3'></textarea>
+      <button onclick='sendMsg()'>Send</button>
     </div>
   </div>
+<script src="/static/app.js"></script>
+<script>
+  if('serviceWorker' in navigator){
+    navigator.serviceWorker.register('/sw.js');
+  }
+</script>
 </body>
 </html>
